# RonaldMcDonald

./: .env_example  .gitignore  README.md  audiotospeech.py  exallm.py  groqaudio.py  groqllm.py  groqllm_prompted.py  main_telebot.py  main_telebot_old.py  output.txt  pyproject.toml  requirements.txt  resource_handler.py  storyboard.py  test.txt  textscraper.py  video_to_transcript.py
TelegramBotModule/: bot.py  image.py
logs/: instagram_data.json  tiktok_data.json  tiktok_data_7558.json
resource/: youtube_cc_10277  youtube_cc_18856
